--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/public/mortarboard.png" type="image/png" />
+    <link rel="icon" href="/mortarboard.png" type="image/png" />
     <title>Leandro Risso Venâncio</title>
     <meta name="author" content="Leandro Venâncio" />
     <meta
